--- a/style.css
+++ b/style.css
@@ -55,3 +55,15 @@ color: white;
 .about-me {
 font-family: myFont1;
 }
+
+
+
+
+
+
+
+.box1{
+    width: 30% ;
+    height: 50% ;
+    background-color: skyblue;
+}
