--- a/responsive.css
+++ b/responsive.css
@@ -20,19 +20,27 @@
     .about-me .right{
         width: 100%;
         padding: 0 0;
+
+
+
+
+
+
+    }
+    .contact-form{
+        display: flex;
+        flex-direction: column;
+    
+    }
+    .contact-form .row1{
+        text-align: center;
+    }
+
+
+
+    table,th,td{
+  font-size: 14px;
+  
     }
 }
 
-@media (max-width:576px) {
-
-.contact-form{
-    display: flex;
-    flex-direction: column;
-
-}
-.contact-form .row1{
-    text-align: center;
-}
-
-
-}
