--- a/responsive.css
+++ b/responsive.css
@@ -44,3 +44,21 @@
     }
 }
 
+
+
+@media (max-width:271px) {
+    table tr {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: 0 0;
+        margin: 0 0;
+    }
+    
+    table,th,td{
+        font-size: 10px;
+        
+          }
+    
+}
