--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ html {
 html,body {
 height: 100%;
 width: 100%;
+
 }
 
 .nav{
@@ -56,7 +57,10 @@ color: white;
 font-family: myFont1;
 }
 
-
+/* 
+.banner-text-img img{
+filter: drop-shadow(6px 6px 50px rgb(255, 0, 0));
+} */
 
 
 
